# echovec

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: bench_forward.py
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/01_pretrain_synthetic/: README.md  pretrain.py
examples/02_extract_features/: README.md  extract.py
examples/03_gradcheck_autograd/: README.md  gradcheck.py
scripts/: release.sh  run_tests.sh
src/echovec/: __init__.py  cli.py  config.py  masking.py  testing.py
src/echovec/autograd/: __init__.py  functional.py  tensor.py
src/echovec/data/: __init__.py  audio.py  collate.py  dataset.py
src/echovec/losses/: __init__.py  contrastive.py  diversity.py
src/echovec/models/: __init__.py  context_network.py  feature_encoder.py  quantizer.py  wav2vec.py
src/echovec/nn/: __init__.py  activation.py  attention.py  conv.py  dropout.py  init.py  linear.py  module.py  norm.py  transformer.py
src/echovec/training/: __init__.py  optim.py  pretrainer.py  schedule.py
src/echovec/utils/: __init__.py  checkpoint.py  (+2 more)
tests/: conftest.py  test_cli.py  test_data.py  test_functional.py  test_masking.py  test_model.py  test_nn.py  test_optim.py  test_quantizer.py  test_tensor.py  test_training.py
