[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echovec"
version = "0.1.0"
description = "Self-supervised speech representation learning in pure NumPy: wav2vec-style contrastive pretraining with a built-in autodiff engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Meng Feo" }]
keywords = [
    "speech",
    "self-supervised-learning",
    "contrastive-learning",
    "wav2vec",
    "representation-learning",
    "numpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
audio = ["soundfile>=0.12"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/lauralong78/echovec"
Repository = "https://github.com/lauralong78/echovec"
Issues = "https://github.com/lauralong78/echovec/issues"

[project.scripts]
echovec = "echovec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
echovec = ["py.typed"]
